...
        android:layout_marginStart="150dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/oldenburg"
        android:textColor="@color/green_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditNickname"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/losesPlayer_text" />

    <TextView
        android:id="@+id/loses_text"
...
        app:layout_constraintEnd_toStartOf="@+id/buttonEditNickname"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text" />

    <TextView
        android:id="@+id/nicknamePlayer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/oldenburg"
        android:textColor="@color/green_500"
...
