<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title=""
        app:itemIconTint="@drawable/bottom_navigation_selector"/>
    <item
        android:id="@+id/navigation_game"
        android:icon="@drawable/console"
        android:title="" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="" />

</menu>