<resources>
    <string name="app_name">RPSGame</string>
    <string name="title_game">Game</string>
    <string name="title_settings">Settings</string>
    <string name="title_info">Info</string>
    <string name="name_of_game">RPSGame</string>
    <string name="nickname_text">Nickname</string>
    <string name="edit_nickname_text">editNickname</string>
    <string name="first_image_info_text">first_image_rps</string>
    <string name="wins_text">Wins</string>
    <string name="loses_text">Loses</string>
    <string name="rounds_text">Rounds</string>
    <string name="search">Search</string>
    <string name="start_connection">Start Connection</string>
    <string name="send">send</string>
    <string name="on_off_bt">on/off</string>
    <string name="on_off_disc">on/off</string>
    <string name="not_connected">You are not connected!</string>
    <string name="connected">You are connected to %s!</string>
    <string name="chosen">You chosen : %s!</string>
    <string name="win">You win!</string>
    <string name="lose">You lose!</string>
    <string name="draw">It\'s a draw!</string>
    <string name="restart">restart</string>
    <string name="reset">reset</string>
    <string name="tooltip_search">Searches for opponents you can connect to</string>
    <string name="tooltip_reset">Resets the connection to the current opponent</string>
    <string name="tooltip_bt_on_off">Enables / disables bluetooth</string>
    <string name="tooltip_disc_on_off">Enables/disables discoverability by other players</string>
    <string name="tooltip_restart">Restarts the round</string>
    <string name="tooltip_edit_nickname">Changes the current player name</string>
</resources>