<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.settings.SettingsFragment">

    <Button
        android:id="@+id/btnOnOff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="42dp"
        android:background="@color/green_400"
        android:text="@string/on_off_bt"
        android:tooltipText="@string/tooltip_bt_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/discOnOff"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="42dp"
        android:background="@color/green_400"
        android:text="@string/on_off_disc"
        android:tooltipText="@string/tooltip_disc_on_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOnOff" />

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/green_400"
        android:text="@string/search"
        android:tooltipText="@string/tooltip_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvNewDevices" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/btnFindUnpairedDevices"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/discOnOff"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/green_400"
        android:text="@string/reset"
        android:tooltipText="@string/tooltip_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFindUnpairedDevices" />

    <TextView
        android:id="@+id/bluetooth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/oldenburg"
        android:text="Bluetooth"
        android:textColor="@color/green_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnOnOff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discoverability_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/oldenburg"
        android:text="Discoverability"
        android:textColor="@color/green_500"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/discOnOff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_text" />

</androidx.constraintlayout.widget.ConstraintLayout>